--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -278,10 +278,11 @@ agm-map {
     padding-top: 6px;
 }
 .help_mat {
-    font-size: 35px;
-    margin-left: 150px;
+    font-size: 30px;
+    margin-left: 180px;
     padding-bottom: 30px;
     cursor: pointer;
+    position: absolute;
 }
 
 [data-md-tooltip]:before {
@@ -344,10 +345,9 @@ agm-map {
   }
 }
 .helpicn {
+    margin-left:215px;
     position: absolute;
-    margin-bottom: 10px;
-    bottom: 69px;
-    padding-left: 10px;
+    bottom: 65px;
 }
 input[type="radio"] {
    opacity: 0;
