--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,3 +28,14 @@ a {
         max-height: calc(40% - 55px);
     }
 }
+
+@media (max-width: 320px)   {
+   .navbar-center {
+        font-size: 1.5rem;
+    }
+
+    .navbar-brand {
+        visibility: hidden;
+    }
+}
+ 
