--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
 </div> -->
 
 
+<!-- <router-outlet></router-outlet> -->
+
 <div class="container">
   <div class="row">
     <div class="container_header">
@@ -20,7 +22,7 @@
   </div>
   <div class="row">
     <div class="col-md-12 container-nopadding">
-        <app-home></app-home>
+      <app-home></app-home>    
     </div>
   </div>
-</div> 
+</div>
